sfdx-project/force-app/main/default/objects/Source__c/Source__c.object-meta.xml
<CustomObject>
    <description>The underlying evidence record (URL + raw payload) for one or more Signals. Immutable after creation.</description>
    <label>Source</label>
    <nameField>
        <displayFormat>SRC-{0000}</displayFormat>
        <label>Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>