sfdx-project/force-app/main/default/objects/Source__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sources</relationshipLabel>
    <relationshipName>Sources</relationshipName>
    <type>Lookup</type>
</CustomField>