sfdx-project/force-app/main/default/objects/Source__c/fields/Confidence_Tier__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Tier__c</fullName>
    <label>Confidence Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Tier 1 - Regulatory</fullName><default>false</default><label>Tier 1 - Regulatory</label></value>
            <value><fullName>Tier 2 - Trade Press</fullName><default>false</default><label>Tier 2 - Trade Press</label></value>
            <value><fullName>Tier 3 - Aggregator</fullName><default>false</default><label>Tier 3 - Aggregator</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>