sfdx-project/force-app/main/default/objects/Source__c/fields/Fetch_Date__c.field-meta.xml
<CustomField>
    <fullName>Fetch_Date__c</fullName>
    <label>Fetch Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>