sfdx-project/force-app/main/default/objects/Source__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Publisher</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>BioSpace</fullName><default>false</default><label>BioSpace</label></value>
            <value><fullName>BusinessWire</fullName><default>false</default><label>BusinessWire</label></value>
            <value><fullName>ClinicalTrials.gov</fullName><default>false</default><label>ClinicalTrials.gov</label></value>
            <value><fullName>Endpoints News</fullName><default>false</default><label>Endpoints News</label></value>
            <value><fullName>FierceBiotech</fullName><default>false</default><label>FierceBiotech</label></value>
            <value><fullName>GlobeNewswire</fullName><default>false</default><label>GlobeNewswire</label></value>
            <value><fullName>Google News</fullName><default>false</default><label>Google News</label></value>
            <value><fullName>Labiotech</fullName><default>false</default><label>Labiotech</label></value>
            <value><fullName>PR Newswire</fullName><default>false</default><label>PR Newswire</label></value>
            <value><fullName>SEC EDGAR</fullName><default>false</default><label>SEC EDGAR</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>