sfdx-project/force-app/main/default/objects/Source__c/fields/Source_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source External ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>