sfdx-project/force-app/main/default/objects/Source__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>Source URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>