sfdx-project/force-app/main/default/objects/Source__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Verification Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Unverified</fullName><default>true</default><label>Unverified</label></value>
            <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>Broken</fullName><default>false</default><label>Broken</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>